a lot of fix and updates
