# pkg/api/service.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.10
-// 	protoc        v5.27.1
+// 	protoc-gen-go v1.36.11
+// 	protoc        (unknown)
 // source: service.proto
 
 package gotemplate
@@ -23,50 +23,6 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
-type GetUserRequest struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	UserId        int64                  `protobuf:"varint,1,opt,name=user_id,json=userId,proto3" json:"user_id,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *GetUserRequest) Reset() {
-	*x = GetUserRequest{}
-	mi := &file_service_proto_msgTypes[0]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *GetUserRequest) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*GetUserRequest) ProtoMessage() {}
-
-func (x *GetUserRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[0]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use GetUserRequest.ProtoReflect.Descriptor instead.
-func (*GetUserRequest) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *GetUserRequest) GetUserId() int64 {
-	if x != nil {
-		return x.UserId
-	}
-	return 0
-}
-
 type GetUserResponse struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	Data          *User                  `protobuf:"bytes,1,opt,name=data,proto3" json:"data,omitempty"`
@@ -76,7 +32,7 @@ type GetUserResponse struct {
 
 func (x *GetUserResponse) Reset() {
 	*x = GetUserResponse{}
-	mi := &file_service_proto_msgTypes[1]
+	mi := &file_service_proto_msgTypes[0]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -88,7 +44,7 @@ func (x *GetUserResponse) String() string {
 func (*GetUserResponse) ProtoMessage() {}
 
 func (x *GetUserResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[1]
+	mi := &file_service_proto_msgTypes[0]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -101,7 +57,7 @@ func (x *GetUserResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetUserResponse.ProtoReflect.Descriptor instead.
 func (*GetUserResponse) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{1}
+	return file_service_proto_rawDescGZIP(), []int{0}
 }
 
 func (x *GetUserResponse) GetData() *User {
@@ -122,7 +78,7 @@ type User struct {
 
 func (x *User) Reset() {
 	*x = User{}
-	mi := &file_service_proto_msgTypes[2]
+	mi := &file_service_proto_msgTypes[1]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -134,7 +90,7 @@ func (x *User) String() string {
 func (*User) ProtoMessage() {}
 
 func (x *User) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[2]
+	mi := &file_service_proto_msgTypes[1]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -147,7 +103,7 @@ func (x *User) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use User.ProtoReflect.Descriptor instead.
 func (*User) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{2}
+	return file_service_proto_rawDescGZIP(), []int{1}
 }
 
 func (x *User) GetId() int64 {
@@ -171,7 +127,7 @@ func (x *User) GetSurname() string {
 	return ""
 }
 
-// Facebase messages
+// CyberMate messages
 type RegisterByTelegramRequest struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	InitDataRaw   string                 `protobuf:"bytes,1,opt,name=init_data_raw,json=initDataRaw,proto3" json:"init_data_raw,omitempty"`
@@ -182,7 +138,7 @@ type RegisterByTelegramRequest struct {
 
 func (x *RegisterByTelegramRequest) Reset() {
 	*x = RegisterByTelegramRequest{}
-	mi := &file_service_proto_msgTypes[3]
+	mi := &file_service_proto_msgTypes[2]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -194,7 +150,7 @@ func (x *RegisterByTelegramRequest) String() string {
 func (*RegisterByTelegramRequest) ProtoMessage() {}
 
 func (x *RegisterByTelegramRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[3]
+	mi := &file_service_proto_msgTypes[2]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -207,7 +163,7 @@ func (x *RegisterByTelegramRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use RegisterByTelegramRequest.ProtoReflect.Descriptor instead.
 func (*RegisterByTelegramRequest) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{3}
+	return file_service_proto_rawDescGZIP(), []int{2}
 }
 
 func (x *RegisterByTelegramRequest) GetInitDataRaw() string {
@@ -233,7 +189,7 @@ type RegisterByTelegramResponse struct {
 
 func (x *RegisterByTelegramResponse) Reset() {
 	*x = RegisterByTelegramResponse{}
-	mi := &file_service_proto_msgTypes[4]
+	mi := &file_service_proto_msgTypes[3]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -245,7 +201,7 @@ func (x *RegisterByTelegramResponse) String() string {
 func (*RegisterByTelegramResponse) ProtoMessage() {}
 
 func (x *RegisterByTelegramResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[4]
+	mi := &file_service_proto_msgTypes[3]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -258,7 +214,7 @@ func (x *RegisterByTelegramResponse) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use RegisterByTelegramResponse.ProtoReflect.Descriptor instead.
 func (*RegisterByTelegramResponse) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{4}
+	return file_service_proto_rawDescGZIP(), []int{3}
 }
 
 func (x *RegisterByTelegramResponse) GetProfileId() int64 {
@@ -277,7 +233,7 @@ type GetUserByTelegramIdRequest struct {
 
 func (x *GetUserByTelegramIdRequest) Reset() {
 	*x = GetUserByTelegramIdRequest{}
-	mi := &file_service_proto_msgTypes[5]
+	mi := &file_service_proto_msgTypes[4]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -289,7 +245,7 @@ func (x *GetUserByTelegramIdRequest) String() string {
 func (*GetUserByTelegramIdRequest) ProtoMessage() {}
 
 func (x *GetUserByTelegramIdRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_service_proto_msgTypes[5]
+	mi := &file_service_proto_msgTypes[4]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -302,7 +258,7 @@ func (x *GetUserByTelegramIdRequest) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use GetUserByTelegramIdRequest.ProtoReflect.Descriptor instead.
 func (*GetUserByTelegramIdRequest) Descriptor() ([]byte, []int) {
-	return file_service_proto_rawDescGZIP(), []int{5}
+	return file_service_proto_rawDescGZIP(), []int{4}
 }
 
 func (x *GetUserByTelegramIdRequest) GetTelegramId() string {
@@ -316,9 +272,7 @@ var File_service_proto protoreflect.FileDescriptor
 
 const file_service_proto_rawDesc = "" +
 	"\n" +
-	"\rservice.proto\x12\x0eapi.gotemplate\x1a\x1fgoogle/api/field_behavior.proto\x1a\x1cgoogle/api/annotations.proto\x1a.protoc-gen-openapiv2/options/annotations.proto\"O\n" +
-	"\x0eGetUserRequest\x12=\n" +
-	"\auser_id\x18\x01 \x01(\x03B$\x92A\x1e2\x1cThe UserId field description\xe0A\x02R\x06userId\";\n" +
+	"\rservice.proto\x12\x0eapi.gotemplate\x1a\x1fgoogle/api/field_behavior.proto\x1a\x1cgoogle/api/annotations.proto\x1a.protoc-gen-openapiv2/options/annotations.proto\";\n" +
 	"\x0fGetUserResponse\x12(\n" +
 	"\x04data\x18\x01 \x01(\v2\x14.api.gotemplate.UserR\x04data\"D\n" +
 	"\x04User\x12\x0e\n" +
@@ -334,14 +288,11 @@ const file_service_proto_rawDesc = "" +
 	"profile_id\x18\x01 \x01(\x03R\tprofileId\"B\n" +
 	"\x1aGetUserByTelegramIdRequest\x12$\n" +
 	"\vtelegram_id\x18\x01 \x01(\tB\x03\xe0A\x02R\n" +
-	"telegramId2\xb1\x01\n" +
-	"\x05Users\x12\xa7\x01\n" +
-	"\aGetUser\x12\x1e.api.gotemplate.GetUserRequest\x1a\x1f.api.gotemplate.GetUserResponse\"[\x92AH\x12\aGetUser\x1a=Метод для получения пользователя\x82\xd3\xe4\x93\x02\n" +
-	"\x12\b/v1/user2\x9c\x03\n" +
-	"\bFacebase\x12\xc7\x01\n" +
+	"telegramId2\x9d\x03\n" +
+	"\tCyberMate\x12\xc7\x01\n" +
 	"\x12RegisterByTelegram\x12).api.gotemplate.RegisterByTelegramRequest\x1a*.api.gotemplate.RegisterByTelegramResponse\"Z\x92A@\x12\x12RegisterByTelegram\x1a*Register user by Telegram WebApp init data\x82\xd3\xe4\x93\x02\x11:\x01*\"\f/v1/register\x12\xc5\x01\n" +
-	"\x13GetUserByTelegramId\x12*.api.gotemplate.GetUserByTelegramIdRequest\x1a\x1f.api.gotemplate.GetUserResponse\"a\x92A6\x12\x13GetUserByTelegramId\x1a\x1fGet user profile by telegram id\x82\xd3\xe4\x93\x02\"\x12 /v1/users/telegram/{telegram_id}BL\x92A\x16\x12\x14\n" +
-	"\vGO Template2\x051.0.0Z1gitlab16.skiftrade.kz/templates/go/api;gotemplateb\x06proto3"
+	"\x13GetUserByTelegramId\x12*.api.gotemplate.GetUserByTelegramIdRequest\x1a\x1f.api.gotemplate.GetUserResponse\"a\x92A6\x12\x13GetUserByTelegramId\x1a\x1fGet user profile by telegram id\x82\xd3\xe4\x93\x02\"\x12 /v1/users/telegram/{telegram_id}BN\x92A\x18\x12\x16\n" +
+	"\rCyberMate API2\x051.0.0Z1gitlab16.skiftrade.kz/templates/go/api;gotemplateb\x06proto3"
 
 var (
 	file_service_proto_rawDescOnce sync.Once
@@ -355,25 +306,22 @@ func file_service_proto_rawDescGZIP() []byte {
 	return file_service_proto_rawDescData
 }
 
-var file_service_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_service_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
 var file_service_proto_goTypes = []any{
-	(*GetUserRequest)(nil),             // 0: api.gotemplate.GetUserRequest
-	(*GetUserResponse)(nil),            // 1: api.gotemplate.GetUserResponse
-	(*User)(nil),                       // 2: api.gotemplate.User
-	(*RegisterByTelegramRequest)(nil),  // 3: api.gotemplate.RegisterByTelegramRequest
-	(*RegisterByTelegramResponse)(nil), // 4: api.gotemplate.RegisterByTelegramResponse
-	(*GetUserByTelegramIdRequest)(nil), // 5: api.gotemplate.GetUserByTelegramIdRequest
+	(*GetUserResponse)(nil),            // 0: api.gotemplate.GetUserResponse
+	(*User)(nil),                       // 1: api.gotemplate.User
+	(*RegisterByTelegramRequest)(nil),  // 2: api.gotemplate.RegisterByTelegramRequest
+	(*RegisterByTelegramResponse)(nil), // 3: api.gotemplate.RegisterByTelegramResponse
+	(*GetUserByTelegramIdRequest)(nil), // 4: api.gotemplate.GetUserByTelegramIdRequest
 }
 var file_service_proto_depIdxs = []int32{
-	2, // 0: api.gotemplate.GetUserResponse.data:type_name -> api.gotemplate.User
-	0, // 1: api.gotemplate.Users.GetUser:input_type -> api.gotemplate.GetUserRequest
-	3, // 2: api.gotemplate.Facebase.RegisterByTelegram:input_type -> api.gotemplate.RegisterByTelegramRequest
-	5, // 3: api.gotemplate.Facebase.GetUserByTelegramId:input_type -> api.gotemplate.GetUserByTelegramIdRequest
-	1, // 4: api.gotemplate.Users.GetUser:output_type -> api.gotemplate.GetUserResponse
-	4, // 5: api.gotemplate.Facebase.RegisterByTelegram:output_type -> api.gotemplate.RegisterByTelegramResponse
-	1, // 6: api.gotemplate.Facebase.GetUserByTelegramId:output_type -> api.gotemplate.GetUserResponse
-	4, // [4:7] is the sub-list for method output_type
-	1, // [1:4] is the sub-list for method input_type
+	1, // 0: api.gotemplate.GetUserResponse.data:type_name -> api.gotemplate.User
+	2, // 1: api.gotemplate.CyberMate.RegisterByTelegram:input_type -> api.gotemplate.RegisterByTelegramRequest
+	4, // 2: api.gotemplate.CyberMate.GetUserByTelegramId:input_type -> api.gotemplate.GetUserByTelegramIdRequest
+	3, // 3: api.gotemplate.CyberMate.RegisterByTelegram:output_type -> api.gotemplate.RegisterByTelegramResponse
+	0, // 4: api.gotemplate.CyberMate.GetUserByTelegramId:output_type -> api.gotemplate.GetUserResponse
+	3, // [3:5] is the sub-list for method output_type
+	1, // [1:3] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
 	1, // [1:1] is the sub-list for extension extendee
 	0, // [0:1] is the sub-list for field type_name
@@ -390,9 +338,9 @@ func file_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_service_proto_rawDesc), len(file_service_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   5,
 			NumExtensions: 0,
-			NumServices:   2,
+			NumServices:   1,
 		},
 		GoTypes:           file_service_proto_goTypes,
 		DependencyIndexes: file_service_proto_depIdxs,
