# pkg/api/service_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.5.1
-// - protoc             v5.27.1
+// - protoc-gen-go-grpc v1.6.1
+// - protoc             (unknown)
 // source: service.proto
 
 package gotemplate
@@ -19,249 +19,147 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	Users_GetUser_FullMethodName = "/api.gotemplate.Users/GetUser"
+	CyberMate_RegisterByTelegram_FullMethodName  = "/api.gotemplate.CyberMate/RegisterByTelegram"
+	CyberMate_GetUserByTelegramId_FullMethodName = "/api.gotemplate.CyberMate/GetUserByTelegramId"
 )
 
-// UsersClient is the client API for Users service.
-//
-// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-type UsersClient interface {
-	GetUser(ctx context.Context, in *GetUserRequest, opts ...grpc.CallOption) (*GetUserResponse, error)
-}
-
-type usersClient struct {
-	cc grpc.ClientConnInterface
-}
-
-func NewUsersClient(cc grpc.ClientConnInterface) UsersClient {
-	return &usersClient{cc}
-}
-
-func (c *usersClient) GetUser(ctx context.Context, in *GetUserRequest, opts ...grpc.CallOption) (*GetUserResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(GetUserResponse)
-	err := c.cc.Invoke(ctx, Users_GetUser_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// UsersServer is the server API for Users service.
-// All implementations must embed UnimplementedUsersServer
-// for forward compatibility.
-type UsersServer interface {
-	GetUser(context.Context, *GetUserRequest) (*GetUserResponse, error)
-	mustEmbedUnimplementedUsersServer()
-}
-
-// UnimplementedUsersServer must be embedded to have
-// forward compatible implementations.
-//
-// NOTE: this should be embedded by value instead of pointer to avoid a nil
-// pointer dereference when methods are called.
-type UnimplementedUsersServer struct{}
-
-func (UnimplementedUsersServer) GetUser(context.Context, *GetUserRequest) (*GetUserResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetUser not implemented")
-}
-func (UnimplementedUsersServer) mustEmbedUnimplementedUsersServer() {}
-func (UnimplementedUsersServer) testEmbeddedByValue()               {}
-
-// UnsafeUsersServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to UsersServer will
-// result in compilation errors.
-type UnsafeUsersServer interface {
-	mustEmbedUnimplementedUsersServer()
-}
-
-func RegisterUsersServer(s grpc.ServiceRegistrar, srv UsersServer) {
-	// If the following call pancis, it indicates UnimplementedUsersServer was
-	// embedded by pointer and is nil.  This will cause panics if an
-	// unimplemented method is ever invoked, so we test this at initialization
-	// time to prevent it from happening at runtime later due to I/O.
-	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
-		t.testEmbeddedByValue()
-	}
-	s.RegisterService(&Users_ServiceDesc, srv)
-}
-
-func _Users_GetUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(GetUserRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(UsersServer).GetUser(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: Users_GetUser_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(UsersServer).GetUser(ctx, req.(*GetUserRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// Users_ServiceDesc is the grpc.ServiceDesc for Users service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var Users_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "api.gotemplate.Users",
-	HandlerType: (*UsersServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "GetUser",
-			Handler:    _Users_GetUser_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "service.proto",
-}
-
-const (
-	Facebase_RegisterByTelegram_FullMethodName  = "/api.gotemplate.Facebase/RegisterByTelegram"
-	Facebase_GetUserByTelegramId_FullMethodName = "/api.gotemplate.Facebase/GetUserByTelegramId"
-)
-
-// FacebaseClient is the client API for Facebase service.
+// CyberMateClient is the client API for CyberMate service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 //
-// Facebase API
-type FacebaseClient interface {
+// CyberMate API
+type CyberMateClient interface {
 	// Registers a user based on Telegram init data; creates Profile and Wallet
 	RegisterByTelegram(ctx context.Context, in *RegisterByTelegramRequest, opts ...grpc.CallOption) (*RegisterByTelegramResponse, error)
 	// Returns user profile by telegram_id
 	GetUserByTelegramId(ctx context.Context, in *GetUserByTelegramIdRequest, opts ...grpc.CallOption) (*GetUserResponse, error)
 }
 
-type facebaseClient struct {
+type cyberMateClient struct {
 	cc grpc.ClientConnInterface
 }
 
-func NewFacebaseClient(cc grpc.ClientConnInterface) FacebaseClient {
-	return &facebaseClient{cc}
+func NewCyberMateClient(cc grpc.ClientConnInterface) CyberMateClient {
+	return &cyberMateClient{cc}
 }
 
-func (c *facebaseClient) RegisterByTelegram(ctx context.Context, in *RegisterByTelegramRequest, opts ...grpc.CallOption) (*RegisterByTelegramResponse, error) {
+func (c *cyberMateClient) RegisterByTelegram(ctx context.Context, in *RegisterByTelegramRequest, opts ...grpc.CallOption) (*RegisterByTelegramResponse, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(RegisterByTelegramResponse)
-	err := c.cc.Invoke(ctx, Facebase_RegisterByTelegram_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, CyberMate_RegisterByTelegram_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *facebaseClient) GetUserByTelegramId(ctx context.Context, in *GetUserByTelegramIdRequest, opts ...grpc.CallOption) (*GetUserResponse, error) {
+func (c *cyberMateClient) GetUserByTelegramId(ctx context.Context, in *GetUserByTelegramIdRequest, opts ...grpc.CallOption) (*GetUserResponse, error) {
 	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetUserResponse)
-	err := c.cc.Invoke(ctx, Facebase_GetUserByTelegramId_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, CyberMate_GetUserByTelegramId_FullMethodName, in, out, cOpts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-// FacebaseServer is the server API for Facebase service.
-// All implementations must embed UnimplementedFacebaseServer
+// CyberMateServer is the server API for CyberMate service.
+// All implementations must embed UnimplementedCyberMateServer
 // for forward compatibility.
 //
-// Facebase API
-type FacebaseServer interface {
+// CyberMate API
+type CyberMateServer interface {
 	// Registers a user based on Telegram init data; creates Profile and Wallet
 	RegisterByTelegram(context.Context, *RegisterByTelegramRequest) (*RegisterByTelegramResponse, error)
 	// Returns user profile by telegram_id
 	GetUserByTelegramId(context.Context, *GetUserByTelegramIdRequest) (*GetUserResponse, error)
-	mustEmbedUnimplementedFacebaseServer()
+	mustEmbedUnimplementedCyberMateServer()
 }
 
-// UnimplementedFacebaseServer must be embedded to have
+// UnimplementedCyberMateServer must be embedded to have
 // forward compatible implementations.
 //
 // NOTE: this should be embedded by value instead of pointer to avoid a nil
 // pointer dereference when methods are called.
-type UnimplementedFacebaseServer struct{}
+type UnimplementedCyberMateServer struct{}
 
-func (UnimplementedFacebaseServer) RegisterByTelegram(context.Context, *RegisterByTelegramRequest) (*RegisterByTelegramResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method RegisterByTelegram not implemented")
+func (UnimplementedCyberMateServer) RegisterByTelegram(context.Context, *RegisterByTelegramRequest) (*RegisterByTelegramResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method RegisterByTelegram not implemented")
 }
-func (UnimplementedFacebaseServer) GetUserByTelegramId(context.Context, *GetUserByTelegramIdRequest) (*GetUserResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetUserByTelegramId not implemented")
+func (UnimplementedCyberMateServer) GetUserByTelegramId(context.Context, *GetUserByTelegramIdRequest) (*GetUserResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetUserByTelegramId not implemented")
 }
-func (UnimplementedFacebaseServer) mustEmbedUnimplementedFacebaseServer() {}
-func (UnimplementedFacebaseServer) testEmbeddedByValue()                  {}
+func (UnimplementedCyberMateServer) mustEmbedUnimplementedCyberMateServer() {}
+func (UnimplementedCyberMateServer) testEmbeddedByValue()                   {}
 
-// UnsafeFacebaseServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to FacebaseServer will
+// UnsafeCyberMateServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to CyberMateServer will
 // result in compilation errors.
-type UnsafeFacebaseServer interface {
-	mustEmbedUnimplementedFacebaseServer()
+type UnsafeCyberMateServer interface {
+	mustEmbedUnimplementedCyberMateServer()
 }
 
-func RegisterFacebaseServer(s grpc.ServiceRegistrar, srv FacebaseServer) {
-	// If the following call pancis, it indicates UnimplementedFacebaseServer was
+func RegisterCyberMateServer(s grpc.ServiceRegistrar, srv CyberMateServer) {
+	// If the following call panics, it indicates UnimplementedCyberMateServer was
 	// embedded by pointer and is nil.  This will cause panics if an
 	// unimplemented method is ever invoked, so we test this at initialization
 	// time to prevent it from happening at runtime later due to I/O.
 	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
 		t.testEmbeddedByValue()
 	}
-	s.RegisterService(&Facebase_ServiceDesc, srv)
+	s.RegisterService(&CyberMate_ServiceDesc, srv)
 }
 
-func _Facebase_RegisterByTelegram_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _CyberMate_RegisterByTelegram_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(RegisterByTelegramRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(FacebaseServer).RegisterByTelegram(ctx, in)
+		return srv.(CyberMateServer).RegisterByTelegram(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: Facebase_RegisterByTelegram_FullMethodName,
+		FullMethod: CyberMate_RegisterByTelegram_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(FacebaseServer).RegisterByTelegram(ctx, req.(*RegisterByTelegramRequest))
+		return srv.(CyberMateServer).RegisterByTelegram(ctx, req.(*RegisterByTelegramRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _Facebase_GetUserByTelegramId_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _CyberMate_GetUserByTelegramId_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(GetUserByTelegramIdRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(FacebaseServer).GetUserByTelegramId(ctx, in)
+		return srv.(CyberMateServer).GetUserByTelegramId(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: Facebase_GetUserByTelegramId_FullMethodName,
+		FullMethod: CyberMate_GetUserByTelegramId_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(FacebaseServer).GetUserByTelegramId(ctx, req.(*GetUserByTelegramIdRequest))
+		return srv.(CyberMateServer).GetUserByTelegramId(ctx, req.(*GetUserByTelegramIdRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-// Facebase_ServiceDesc is the grpc.ServiceDesc for Facebase service.
+// CyberMate_ServiceDesc is the grpc.ServiceDesc for CyberMate service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
-var Facebase_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "api.gotemplate.Facebase",
-	HandlerType: (*FacebaseServer)(nil),
+var CyberMate_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.gotemplate.CyberMate",
+	HandlerType: (*CyberMateServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
 			MethodName: "RegisterByTelegram",
-			Handler:    _Facebase_RegisterByTelegram_Handler,
+			Handler:    _CyberMate_RegisterByTelegram_Handler,
 		},
 		{
 			MethodName: "GetUserByTelegramId",
-			Handler:    _Facebase_GetUserByTelegramId_Handler,
+			Handler:    _CyberMate_GetUserByTelegramId_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
